--- a/Megano/templates/users/basic_account.html
+++ b/Megano/templates/users/basic_account.html
@@ -6,7 +6,7 @@
             <div class="wrap">
                 <div class="Middle-header">
                     <h1 class="Middle-title">
-                    </h1>
+                    Профиль | {{ request.user.username }}</h1>
                     <ul class="breadcrumbs Middle-breadcrumbs">
                         <li class="breadcrumbs-item"><a href="{% url 'main' %}">Главная</a>
                         </li>
