--- a/Megano/static/app_goods/assets/css/extra.css
+++ b/Megano/static/app_goods/assets/css/extra.css
@@ -1336,6 +1336,18 @@ a.Cart-title {
     display: none;
   }
 }
+.input-container {
+  padding: 100px;
+  display: flex;
+  flex-direction:  column;
+  align-items: center;
+}
+.login-form {
+  display: flex;
+  flex-direction:  column;
+  align-items: center;
+}
+
 .Categories-trigger {
   display: none;
   margin-top: 2rem;
